fixed alignment of top nav

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -38,13 +38,15 @@ body{
 	width: 100%;
 
 	&:hover .underline{
-		width: 22em;
+		width: 25em;
 	}
 
 	ul{
+		text-align: center;
+		width: 100%;
 		li{
 			display: inline-block;
-			padding: 1% 3%;
+			padding: 1% 2%;
 			text-transform: uppercase;
 
 			&:last-child{
